<resources>
    <string name="app_name">Empayar Batik</string>
    <string name="please_wait">Please wait...</string>
    <string name="login">Login</string>
    <string name="not_registered_click_here_to_register">Not registered? <b>Click Here</b> to register</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="registered_click_here_to_login">Registered? <b>Click Here</b> to login</string>
    <string name="search">Search</string>
    <string name="other">Others</string>
    <!--    Don't change or  modify these two-->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="clear_form">Clear Form</string>
    <string name="xs">XS</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="xll">XXL</string>
    <string name="online_payment">Online payment</string>
    <string name="online">Online</string>
    <string name="payment">payment</string>
    <string name="congratulations_submitted">Congratulations! Your order was successfully submitted. You will shortly recieve an SMS or Email. Our Customer servce might contact you to confirm your order.</string>
    <string name="add_to_cart">Add to cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search..</string>
    <string name="coupons">Coupons</string>
    <string name="enter_coupon_title">Enter coupon title</string>
    <string name="enter_coupon_discount">Enter coupon discount in %</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <!--===***===-->
</resources>