<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UI.LoginActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/colorTextPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Email"
        android:textColor="@color/colorTextSecondary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_bg"
        android:hint="Enter your email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Password"
        android:textColor="@color/colorTextSecondary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:paddingVertical="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp">

        <EditText
            android:id="@+id/login_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/edit_text_bg"
            android:hint="Enter your password"
            android:inputType="textPassword" />

    <ImageButton
        android:id="@+id/show_hide_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/app_name"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_visibility_24"/>
    </RelativeLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/login_click_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/not_registered_click_here_to_register"
        android:textColor="@color/colorTextSecondary"
        android:textSize="16sp" />
</LinearLayout>