<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.RegisterScreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/colorTextPrimary"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="Name"
            android:textColor="@color/colorTextSecondary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/register_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_bg"
            android:hint="Enter your email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
        android:layout_marginTop="15dp"
            android:textColor="@color/colorTextSecondary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/register_email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_bg"
            android:hint="Enter your email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Password"
            android:textColor="@color/colorTextSecondary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:paddingVertical="15dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp">

            <EditText
                android:id="@+id/register_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/edit_text_bg"
                android:hint="Enter your password"
                android:inputType="textPassword" />

            <ImageButton
                android:id="@+id/show_hide_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_visibility_24"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorTextSecondary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/register_address_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_bg"
            android:hint="Enter your address"
            android:lines="3"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp" />
        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Register"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/registered_click_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/registered_click_here_to_login"
            android:textColor="@color/colorTextSecondary"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>